[package]
name = "req"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
bytes = { version = "1.1.0", default-features = false }
common-multipart-rfc7578 = { version = "0.6.0", default-features = false }
futures = { version = "0.3.30", default-features = false }
http = { version = "1.0.0", default-features = false }
http-body-util = { version = "0.1.1", default-features = false }
hyper = { version = "1.0.0", features = ["http1", "http2"], default-features = false }
hyper-rustls = { version = "0.27.0", features = ["http1", "http2", "webpki-tokio"], default-features = false }
hyper-util = { version = "0.1.3", default-features = false }
mime = { version = "0.3.0", default-features = false }
opentelemetry = { version = "0.22.0", features = ["metrics", "trace"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.14.0", default-features = false }
rustls = { version = "0.23.0", features = ["std", "ring", "tls12"], default-features = false }
serde = { version = "1.0.175", default-features = false }
serde_json = { version = "1.0.103", features = ["std"], default-features = false }
serde_urlencoded = { version = "0.7.1", default-features = false }
thiserror = { version = "1.0.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"

missing-errors-doc = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code = "forbid"
